--- a/src/shared/globalStyles.css
+++ b/src/shared/globalStyles.css
@@ -1,6 +1,8 @@
-.container-sidebar {
+.screen-container {
     width: calc(100% - 100px);
     height: 100%;
-    background-color: white;
-    border-radius: 20px;
+}
+
+.flex {
+    display: flex;
 }
