--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,6 +1,8 @@
 .container-sidebar {
     width: 100px;
     height: 100%;
+    background-color: tan;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
