--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  background-color: #20056e;
+  background-color: black;
 }
 
 code {
