--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,6 @@
 .main-body {
     height: 100vh;
     width: 100vw;
-    background-color: tan;
-    border-radius: 50px;
+    background: linear-gradient(100deg, rgba(0,212,255,1) 0%, rgba(9,9,121,1) 49%, rgba(9,9,121,1) 85%, rgba(2,0,40,1) 96%, rgba(2,0,36,1) 100%);    border-radius: 50px;
     display: flex;
 }
